# GaussLab

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debug_segfault.gdb  distrobox.ini  flake.nix  gdb_commands.txt  imgui.ini  request.cpp
src/: callbacks.cpp  callbacks.h  camera.cpp  camera.h  debug_utils.cpp  debug_utils.h  dicom.cpp  main.cpp  main_interface.cpp  main_interface.h  renderer.cpp  renderer.h  request.hpp  scene_loader.cpp  scene_loader.h  shaders.cpp  shaders.h
src/algorithms/: interpolation_code.txt  marchingcubes.cpp  marchingcubes.h
src/backend/: CMakeLists.txt  auxiliaries.cpp  dicom_loader.cpp  engine.cpp  knn.cu  main.cpp  model.cpp
src/backend/dcmcore/: binary_file.h  defs.h  gen_tags.py  tag_table.cpp
src/backend/gsplat/: bindings.cu  bindings.h  config.h  ext.cpp  forward.cu  forward.cuh  helpers.cuh  noinline.h
src/backend/includes/: dicom_loader.hpp  dicom_utils.h  engine.hpp  knn.hpp  model.hpp
src/core/: camera.cpp  camera.h  engine.cpp  engine.h  renderer.cpp  renderer.h  scene_loader.cpp  scene_loader.h  shader_loader.cpp  shader_loader.h  shaders.cpp  shaders.h
src/cuda/: debug_utils.h  render_utils.cu  render_utils.h
src/data_reader/: dicom_reader.cpp  dicom_reader.h  nifti_reader.cpp  nifti_reader.h
src/interface/: callbacks.cpp  callbacks.h  dicom_viewer.cpp  dicom_viewer.h  main_interface.cpp  main_interface.h  request.hpp  viewport.cpp  viewport.h
src/tools/: meshslicing.cpp  meshslicing.h  tools.cpp  tools.h
